unpackaged/main/default/objects/Key_Account_Pricing_Table__c/Key_Account_Pricing_Table__c.object-meta.xml
<CustomObject>
    <label>Grille négociée - Détail</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grilles négociées - Détails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>