unpackaged/main/default/objects/Key_Account_Pricing_Table__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Key_Account_Pricing_Table</relationshipName>
    <type>Lookup</type>
</CustomField>