unpackaged/main/default/objects/Key_Account_Pricing_Table__c/fields/Block_Price__c.field-meta.xml
<CustomField>
    <fullName>Block_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Block Price</label>
    <referenceTo>SBQQ__BlockPrice__c</referenceTo>
    <relationshipName>Key_Account_Pricing_Table</relationshipName>
    <type>Lookup</type>
</CustomField>