unpackaged/main/default/objects/Key_Account_Pricing_Table__c/fields/Calculated_Discount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Discount__c</fullName>
    <description>Si Prix &lt;&gt; vide, calcule le discount par rapport au prix standard, sinon applique la valeur saisie dans Discount.</description>
    <formula>IF(List_Price__r.Price__c =0,NULL,if( AND(Not(ISBLANK(Discount__c)),Not(Discount__c=0)),Discount__c,1-(Price__c/List_Price__r.Price__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Si Prix &lt;&gt; vide, calcule le discount par rapport au prix standard, sinon applique la valeur saisie dans Discount.</inlineHelpText>
    <label>Calculated Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>