unpackaged/main/default/objects/Key_Account_Pricing_Table__c/fields/Compare__c.field-meta.xml
<CustomField>
    <fullName>Compare__c</fullName>
    <formula>1 -(Price__c/List_Price__r.Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>