unpackaged/main/default/objects/Key_Account_Pricing_Table__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount que vous souhaitez appliquer par rapport au prix standard.</description>
    <inlineHelpText>Discount que vous souhaitez appliquer par rapport au prix standard.</inlineHelpText>
    <label>Discount</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>