unpackaged/main/default/objects/Key_Account_Pricing_Table__c/fields/Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Price__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Calculated_Discount__c)),NOT(Calculated_Discount__c=0)),List_Price__r.Price__c * (1- Calculated_Discount__c), Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>