unpackaged/main/default/objects/Key_Account_Pricing_Table__c/fields/KeyAccountPricing__c.field-meta.xml
<CustomField>
    <fullName>KeyAccountPricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Account Pricing</label>
    <referenceTo>KeyAccountPricing__c</referenceTo>
    <relationshipName>Key_Account_Pricing_Table</relationshipName>
    <type>Lookup</type>
</CustomField>