unpackaged/main/default/objects/Key_Account_Pricing_Table__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>List Price</label>
    <referenceTo>List_Price__c</referenceTo>
    <relationshipName>Key_Account_Pricing_Table</relationshipName>
    <type>Lookup</type>
</CustomField>