unpackaged/main/default/objects/Key_Account_Pricing_Table__c/fields/Location_Jour_Sup__c.field-meta.xml
<CustomField>
    <fullName>Location_Jour_Sup__c</fullName>
    <label>Location Jour Sup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>