unpackaged/main/default/objects/Key_Account_Pricing_Table__c/fields/LowerBound__c.field-meta.xml
<CustomField>
    <fullName>LowerBound__c</fullName>
    <label>Lower Bound (Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>