unpackaged/main/default/objects/Key_Account_Pricing_Table__c/fields/New_Discount__c.field-meta.xml
<CustomField>
    <fullName>New_Discount__c</fullName>
    <label>New Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>