unpackaged/main/default/objects/Key_Account_Pricing_Table__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Prix</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>