unpackaged/main/default/objects/Key_Account_Pricing_Table__c/fields/Tech_Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Tech_Final_Price__c</fullName>
    <description>Pour history</description>
    <label>Tech Final Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>