unpackaged/main/default/objects/Key_Account_Pricing_Table__c/fields/UpperBound__c.field-meta.xml
<CustomField>
    <fullName>UpperBound__c</fullName>
    <label>Upper Bound (Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>