unpackaged/main/default/objects/Key_Account_Pricing_Table__c/validationRules/Not_Key_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Key_Account</fullName>
    <active>false</active>
    <description>If account is not a Key account, it should be imposible to create such Prices.</description>
    <errorConditionFormula>Key_Account__c = False</errorConditionFormula>
    <errorMessage>This account is not a key account.</errorMessage>
</ValidationRule>